# ATC-Scoreboard-CSR

./: Cargo.toml  index.html  tailwind.config.js
src/: app.rs  lib.rs  main.rs
src/components/: button.rs  card.rs  container.rs  mod.rs  text.rs  timer.rs
src/data/: competitors.rs  mod.rs  performance.rs  round.rs
src/pages/: battle_timer_page.rs  first_page.rs  mod.rs  result_page.rs  vs_page.rs
