[package]
name = "scoreboard-atc-crs"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.15", features = ["csr"] }
leptos-use = "0.13.5"
leptos_meta = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
